--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/stu_recycler_view"></androidx.recyclerview.widget.RecyclerView>
+    android:orientation="vertical">
+
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/stu_recycler_view">
+
+</androidx.recyclerview.widget.RecyclerView>
+
+
+    <TextView
+        android:id="@+id/empty_list_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="no data found please click the add button on the bar to add new student "
+        android:textColor="@color/text"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="180dp"
+
+        />
+
+</LinearLayout>
+
+
+
 
