--- a/app/src/main/res/layout/stu_list_item.xml
+++ b/app/src/main/res/layout/stu_list_item.xml
@@ -35,6 +35,22 @@
         app:layout_constraintTop_toBottomOf="@+id/stu_name" />
 
 
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="32dp"
+        android:text="Delete"
+        android:textColor="#ffffff"
+        android:background="@color/delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.473">
+
+    </Button>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
